// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots groups/GroupItem Group 1`] = `
<div
  id="root"
>
  <li
    class="MuiListItem-root makeStyles-root MuiListItem-divider makeStyles-divider"
    data-testid="list-item"
  >
    <div
      class="MuiGrid-root MuiGrid-container"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <div
          class="MuiGrid-root makeStyles-gridHeader MuiGrid-container MuiGrid-justify-content-xs-space-between"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
            >
              <h2
                class="MuiTypography-root MuiTypography-h2"
              >
                <a
                  class="MuiTypography-root MuiLink-root MuiLink-underlineHover makeStyles-mainLink MuiTypography-colorPrimary"
                  href="/apps/e96281a6-d1af-4bde-9a0a-97b76e56dc57/groups/11a585f6-9418-4df0-8863-78b2fd3240f8"
                >
                  Stable (ARM)
                </a>
              </h2>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
            >
              <div
                class="MuiBox-root MuiBox-root"
              >
                <p
                  arial-label="group-id"
                  class="MuiTypography-root makeStyles-idLabel MuiTypography-body1 MuiTypography-noWrap"
                >
                  stable
                </p>
              </div>
              <div
                class="MuiBox-root MuiBox-root"
              >
                <span
                  class="MuiTypography-root makeStyles-descriptionLabel MuiTypography-body1"
                >
                  For production clusters (ARM)
                </span>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <div>
              <button
                aria-controls="simple-menu-16"
                aria-haspopup="true"
                aria-label="Open menu"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd"
                data-testid="more-menu-open-button"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
        <hr
          class="MuiDivider-root makeStyles-innerDivider MuiDivider-light"
        />
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-content-xs-space-between MuiGrid-grid-xs-12"
      >
        <div
          class="MuiGrid-root makeStyles-itemSection MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-grid-xs-4"
        >
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <span
              class="MuiTypography-root makeStyles-featureLabel MuiTypography-body1"
            >
              Instances
            </span>
            <div
              class="MuiBox-root MuiBox-root"
            >
              <span
                class="MuiTypography-root makeStyles-label makeStyles-label MuiTypography-body1"
              >
                2
              </span>
              <div
                class="MuiBox-root MuiBox-root"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-colorDisabled"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                  />
                  <path
                    d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
                  />
                </svg>
                <div
                  class="MuiBox-root MuiBox-root"
                >
                  <p
                    class="MuiTypography-root makeStyles-last24hours MuiTypography-body1"
                  >
                    last 24 hours
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root MuiBox-root"
        >
          <hr
            class="MuiDivider-root MuiDivider-vertical"
          />
        </div>
        <div
          class="MuiGrid-root makeStyles-itemSection MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-grid-xs-7"
        >
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <span
              class="MuiTypography-root makeStyles-featureLabel MuiTypography-body1"
            >
              Channel
            </span>
             
            <div
              class="MuiListItem-root MuiListItem-gutters"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
              >
                <div
                  class="MuiGrid-root MuiGrid-item"
                >
                  <div
                    class="MuiAvatar-root MuiAvatar-circular makeStyles-colorAvatar makeStyles-colorAvatar MuiAvatar-colorDefault"
                  >
                    s
                  </div>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item"
                >
                  <div
                    class="MuiListItemText-root makeStyles-root MuiListItemText-multiline"
                  >
                    <div
                      class="MuiBox-root MuiBox-root"
                    >
                      <div
                        class="MuiBox-root MuiBox-root"
                      >
                        stable
                      </div>
                    </div>
                    <div
                      class="MuiBox-root MuiBox-root"
                    >
                      <div
                        class="MuiBox-root MuiBox-root"
                      >
                        No package (ARM64)
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <span
              class="MuiTypography-root makeStyles-featureLabel MuiTypography-body1"
            >
              Updates
            </span>
            <div
              class="MuiBox-root MuiBox-root"
            >
              <span
                class="MuiTypography-root makeStyles-label makeStyles-label MuiTypography-body1"
              >
                <div
                  class="MuiBox-root MuiBox-root"
                >
                  <div
                    class="MuiBox-root MuiBox-root"
                  >
                    Enabled
                  </div>
                  <div
                    class="MuiBox-root MuiBox-root"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root makeStyles-success MuiSvgIcon-fontSizeSmall"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                      />
                    </svg>
                  </div>
                </div>
              </span>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <span
              class="MuiTypography-root makeStyles-featureLabel MuiTypography-body1"
            >
              Rollout Policy
            </span>
            <div
              class="MuiBox-root MuiBox-root"
            >
              <span
                class="MuiTypography-root makeStyles-label makeStyles-label MuiTypography-body1"
              >
                Unlimited number of parallel updates
              </span>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
            >
              <span
                class="MuiTypography-root makeStyles-featureLabel MuiTypography-body1"
              >
                Version breakdown
              </span>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
            >
              <div
                class="MuiBox-root MuiBox-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary MuiTypography-alignCenter"
                  data-testid="empty"
                >
                  No instances available.
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
</div>
`;

exports[`Storyshots groups/GroupItem Loading 1`] = `
<div
  id="root"
>
  <li
    class="MuiListItem-root makeStyles-root MuiListItem-divider makeStyles-divider"
    data-testid="list-item"
  >
    <div
      class="MuiGrid-root MuiGrid-container"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <div
          class="MuiGrid-root makeStyles-gridHeader MuiGrid-container MuiGrid-justify-content-xs-space-between"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
            >
              <h2
                class="MuiTypography-root MuiTypography-h2"
              >
                <a
                  class="MuiTypography-root MuiLink-root MuiLink-underlineHover makeStyles-mainLink MuiTypography-colorPrimary"
                  href="/apps/e96281a6-d1af-4bde-9a0a-97b76e56dc57/groups/11a585f6-9418-4df0-8863-78b2fd3240f8"
                >
                  Stable (ARM)
                </a>
              </h2>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
            >
              <div
                class="MuiBox-root MuiBox-root"
              >
                <p
                  arial-label="group-id"
                  class="MuiTypography-root makeStyles-idLabel MuiTypography-body1 MuiTypography-noWrap"
                >
                  stable
                </p>
              </div>
              <div
                class="MuiBox-root MuiBox-root"
              >
                <span
                  class="MuiTypography-root makeStyles-descriptionLabel MuiTypography-body1"
                >
                  For production clusters (ARM)
                </span>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <div>
              <button
                aria-controls="simple-menu-17"
                aria-haspopup="true"
                aria-label="Open menu"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd"
                data-testid="more-menu-open-button"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
        <hr
          class="MuiDivider-root makeStyles-innerDivider MuiDivider-light"
        />
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-content-xs-space-between MuiGrid-grid-xs-12"
      >
        <div
          class="MuiGrid-root makeStyles-itemSection MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-grid-xs-4"
        >
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <span
              class="MuiTypography-root makeStyles-featureLabel MuiTypography-body1"
            >
              Instances
            </span>
            <div
              class="MuiBox-root MuiBox-root"
            >
              <span
                class="MuiTypography-root makeStyles-label makeStyles-label MuiTypography-body1"
              >
                <div
                  class="MuiBox-root MuiBox-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary MuiTypography-alignCenter"
                    data-testid="empty"
                  >
                    Loading...
                  </p>
                </div>
              </span>
              <div
                class="MuiBox-root MuiBox-root"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-colorDisabled"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                  />
                  <path
                    d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
                  />
                </svg>
                <div
                  class="MuiBox-root MuiBox-root"
                >
                  <p
                    class="MuiTypography-root makeStyles-last24hours MuiTypography-body1"
                  >
                    last 24 hours
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root MuiBox-root"
        >
          <hr
            class="MuiDivider-root MuiDivider-vertical"
          />
        </div>
        <div
          class="MuiGrid-root makeStyles-itemSection MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-grid-xs-7"
        >
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <span
              class="MuiTypography-root makeStyles-featureLabel MuiTypography-body1"
            >
              Channel
            </span>
             
            <div
              class="MuiListItem-root MuiListItem-gutters"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
              >
                <div
                  class="MuiGrid-root MuiGrid-item"
                >
                  <div
                    class="MuiAvatar-root MuiAvatar-circular makeStyles-colorAvatar makeStyles-colorAvatar MuiAvatar-colorDefault"
                  >
                    s
                  </div>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item"
                >
                  <div
                    class="MuiListItemText-root makeStyles-root MuiListItemText-multiline"
                  >
                    <div
                      class="MuiBox-root MuiBox-root"
                    >
                      <div
                        class="MuiBox-root MuiBox-root"
                      >
                        stable
                      </div>
                    </div>
                    <div
                      class="MuiBox-root MuiBox-root"
                    >
                      <div
                        class="MuiBox-root MuiBox-root"
                      >
                        No package (ARM64)
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <span
              class="MuiTypography-root makeStyles-featureLabel MuiTypography-body1"
            >
              Updates
            </span>
            <div
              class="MuiBox-root MuiBox-root"
            >
              <span
                class="MuiTypography-root makeStyles-label makeStyles-label MuiTypography-body1"
              >
                <div
                  class="MuiBox-root MuiBox-root"
                >
                  <div
                    class="MuiBox-root MuiBox-root"
                  >
                    Enabled
                  </div>
                  <div
                    class="MuiBox-root MuiBox-root"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root makeStyles-success MuiSvgIcon-fontSizeSmall"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                      />
                    </svg>
                  </div>
                </div>
              </span>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <span
              class="MuiTypography-root makeStyles-featureLabel MuiTypography-body1"
            >
              Rollout Policy
            </span>
            <div
              class="MuiBox-root MuiBox-root"
            >
              <span
                class="MuiTypography-root makeStyles-label makeStyles-label MuiTypography-body1"
              >
                Unlimited number of parallel updates
              </span>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
            >
              <span
                class="MuiTypography-root makeStyles-featureLabel MuiTypography-body1"
              >
                Version breakdown
              </span>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
            >
              <div
                class="MuiBox-root MuiBox-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary MuiTypography-alignCenter"
                  data-testid="empty"
                >
                  Loading...
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
</div>
`;
